# vihicle

vehicle_course-main/: AGXKit.cpp  AGXKit.h  Battery.cpp  Battery.h  CMakeLists.txt  Camera.cpp  Camera.h  Chassis.cpp  Chassis.h  Display.cpp  Display.h  Gyroscope.cpp  Gyroscope.h  Lidar.cpp  Lidar.h  ObstacleStatus.h  SmartCar.cpp  SmartCar.h  Student.cpp  Student.h  Tire.cpp  Tire.h  main.cpp  tool.cpp  tool.h
